DevTools: fix CSS.addRule protocol method for file:// urls

The previous attempt to fix the bug was in crrev.com/539166:
the patch allowed adding rules to the inspector style sheets.
However, it didn't take into account adding rules into the
already-existing style sheets.

This patch fixes CSS.addRule altogether, allowing CSSOM access
if the operation is happenning from-inside InspectorMutationScope.

Our tests didn't catch the regression since we run with
--allow-file-access-from-files flag.

BUG=818518
R=dgozman

Change-Id: Ic6b198a5ef7abbabcef671edbefb5a9b14fde531
Reviewed-on: https://chromium-review.googlesource.com/1018526
Commit-Queue: Andrey Lushnikov <lushnikov@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552161}
Former-commit-id: 85535060d2e16341b2bde83e21e2a41a7ad35509